// bitset.proto

syntax = "proto3";
package bitset;

message BitSet {
}